fixed the stretch link

--- a/HTML/image-style.css
+++ b/HTML/image-style.css
@@ -1,10 +1,11 @@
 .card{
-    margin: 100px;
+    margin: 10px;
     justify-content: center;
+    display:inline-block;
 }
 
 body {
-    background-color: silver;
+    background-color:whitesmoke;
     /* opacity: 0.3; */
 }
 
